--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
             "email": "gersonalvesdev@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "php": "^8.1"
+    },
     "autoload": {
         "psr-4": {
             "gersonalves\\laravelBase\\": "src/"
